--- a/remove_empty_lines.css
+++ b/remove_empty_lines.css
@@ -19,6 +19,11 @@ body {
     flex: 1;
 }
 
+.text-area-container span {
+    font-size: 12px;
+    color: #333;
+}
+
 .text-area-container h2 {
     margin-top: 0;
     color: #333;
@@ -28,7 +33,7 @@ body {
 
 textarea {
     width: 95%;
-    height: 400px;
+    height: 300px;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -39,8 +44,15 @@ textarea {
 
 .button-group {
     display: flex;
+    align-items: center;
     gap: 10px;
     margin-top: 10px;
+    margin-bottom: 16px;
+    font-weight: 550;
+}
+
+.button-group span {
+    font-size: 12px;
 }
 
 button {
@@ -53,10 +65,10 @@ button {
 }
 
 #pasteBtn {
+    height: 80px;
     background-color: #ecf0f1;
     color: #34495e;
     border: 1px solid #ddd;
-    font-weight: 550;
 }
 
 #pasteBtn:hover {
@@ -65,9 +77,13 @@ button {
 }
 
 #convertBtn {
+    height: 80px;
     background-color: #ecf0f1;
     color: #34495e;
     border: 1px solid #ddd;
+}
+
+#convertBtn span {
     font-weight: 550;
 }
 
@@ -77,11 +93,11 @@ button {
 }
 
 #copyBtn {
+    height: 80px;
     background-color: green;
     color: white;
     border: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-weight: 550;
 }
 
 #copyBtn:hover {
@@ -90,11 +106,11 @@ button {
 }
 
 #clearBtn {
+    height: 80px;
     background-color: #e74c3c;
     color: white;
     border: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    font-weight: 550;
 }
 
 #clearBtn:hover {
@@ -204,4 +220,13 @@ details[open] summary::after {
 #codingHelper:hover {
     background-color: #1291C7;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
+}
+
+#codingHelper span {
+    font-size: 12px;
+    color: #333;
+}
+
+.version {
+    font-weight: bold;
 }
